tests/interpreter/pass/008-largeeq.hyg
assert( 4 >= 2);
assert( 2 >= 2);
assert( 4.0f >= 2.4f)